<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8d2b8"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/user_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        style="@style/StyleBH" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_doily2"
        android:padding="10dp"
        android:contentDescription="@string/doily_deco" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_category_txt"
            style="@style/StyleBH.category" />

        <TextView
            android:id="@+id/recipe_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint=""
            style="@style/StyleBH" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:layout_marginTop="5dp">

        <ImageButton
            android:id="@+id/btn_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_view"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/view_des" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_edit_white"
            android:focusable="false"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:focusableInTouchMode="false"
            android:text=""
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/edit_des" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_delete_white"
            android:focusable="false"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:focusableInTouchMode="false"
            android:text=""
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:contentDescription="@string/delete_des" />

    </LinearLayout>

</LinearLayout>