<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="0dp"
    android:focusable="true"
    android:focusableInTouchMode="true" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/textView"
            android:background="@mipmap/deco"
            android:layout_alignParentTop="true" />
    </RelativeLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/select_unit"
                android:id="@+id/txtTitulo"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_below="@+id/linearLayout"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                style="@style/StyleBH.Title" />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnWeight"
                    android:src="@mipmap/ic_weight"
                    android:clickable="true"
                    android:background="@mipmap/fondo"
                    android:focusable="true"
                    android:padding="14dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".2"
                    android:contentDescription="@string/weight" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFlour"
                    android:src="@mipmap/ic_flour"
                    android:clickable="true"
                    android:background="@mipmap/fondo"
                    android:focusable="true"
                    android:padding="14dp"
                    android:contentDescription="@string/fine"
                    android:layout_weight=".2" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLiq"
                    android:src="@mipmap/ic_liq"
                    android:clickable="true"
                    android:background="@mipmap/fondo"
                    android:focusable="true"
                    android:padding="14dp"
                    android:contentDescription="@string/liquids"
                    android:layout_weight=".2" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnButter"
                    android:src="@mipmap/ic_butter"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="14dp"
                    android:contentDescription="@string/butter"
                    android:background="@mipmap/fondo"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".2" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnTemp"
                    android:src="@mipmap/ic_temp"
                    android:clickable="true"
                    android:background="@mipmap/fondo"
                    android:focusable="true"
                    android:padding="15dp"
                    android:contentDescription="@string/temp"
                    android:layout_weight=".2" />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitulo"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/txtFrom"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:layout_weight=".5"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="25dp"
                        style="@style/StyleBH"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:text="@string/txtTo"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:gravity="center_horizontal"
                        android:layout_weight=".5"
                        android:layout_marginRight="20dp"
                        style="@style/StyleBH"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/editUnit"
                        android:labelFor="@id/editUnit"
                        android:layout_weight=".3"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="40dp"
                        style="@style/StyleBH"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtCon"
                        android:layout_weight=".3"
                        android:gravity="center_horizontal"
                        style="@style/StyleBH"

                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="40dp"
                        android:paddingTop="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner

                        android:id="@+id/from_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="100dp"
                        android:prompt="@string/choose_unit"
                        android:layout_gravity="center_horizontal"
                        android:spinnerMode="dropdown"
                        android:layout_weight=".3"
                        style="@style/StyleBH"
                        android:focusableInTouchMode="true"
                        android:layout_marginLeft="35dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3" />

                    <Spinner

                        android:id="@+id/to_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="100dp"
                        android:prompt="@string/choose_unit"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight=".3"
                        android:spinnerMode="dropdown"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="30dp" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/btn_convert"
                    android:text="@string/btn_convert"
                    android:background="@drawable/white_button"
                    style="@style/StyleBH.Button"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>


        </RelativeLayout>


    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>






